--- a/.gitignore
+++ b/.gitignore
@@ -129,6 +129,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+bocik/
 
 # Spyder project settings
 .spyderproject
@@ -161,5 +162,7 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+
 # Temporary for not storing config with key
 bot_config.json
+*.ini
